--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+### OSX template
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+
 ### PythonVanilla template
 # Byte-compiled / optimized / DLL files
 __pycache__/
