--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "translations-util"
-version = "0.1.0"
+version = "0.2.0"
 description = "Command line tools for extracting and importing translations from and to excel files"
 authors = ["Marius Holter Berntzen <mhberntzen@gmail.com>"]
 readme = "README.md"
-packages = [{include = "import_translations", from = "src"}]
+packages = [{include = "import_translations", from = "src"}, {include = "export_translations", from = "src"}, {include = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -13,7 +13,7 @@ pandas = "^2.2.3"
 colorama = "^0.4.6"
 
 [tool.poetry.scripts]
-import-translations = "import_translations.import_translations:main"
+translation-util = "cli:main"
 
 [build-system]
 requires = ["poetry-core"]
